--- a/web/text_layer_builder.css
+++ b/web/text_layer_builder.css
@@ -38,6 +38,7 @@
     white-space: pre;
     cursor: text;
     transform-origin: 0% 0%;
+    user-select: text;
   }
 
   /* We multiply the font size by --min-font-size, and then scale the text
@@ -115,12 +116,7 @@
   }
 
   ::selection {
-    /* stylelint-disable declaration-block-no-duplicate-properties */
-    /*#if !MOZCENTRAL*/
-    background: rgba(0 0 255 / 0.25);
-    /*#endif*/
-    /* stylelint-enable declaration-block-no-duplicate-properties */
-    background: color-mix(in srgb, AccentColor, transparent 75%);
+    background: transparent;
   }
 
   /* Avoids https://github.com/mozilla/pdf.js/issues/13840 in Chrome */
